<resources>
    <string name="app_name">CurrencyWidget</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">This is an app widget description</string>

    <string name="para_birimi">Para Birimi</string>
    <string name="alis">Alış</string>
    <string name="satis">Satış</string>
    <string name="usd">USD</string>
    <string name="eur">EUR</string>
    <string name="altin">ALTIN</string>
</resources>